// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-validate - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "**CRITICAL**: Must call this skill before deploying anything to Azure. Validates deployment readiness. USE FOR: check if app is ready to deploy, validate azure.yaml or Bicep configuration, run preflight checks, test deployment preview, what-if analysis, verify infrastructure configuration, troubleshoot deployment errors. DO NOT USE FOR: creating new apps (use azure-prepare), deploying (use azure-deploy).",
  "extractedKeywords": [
    "analysis",
    "anything",
    "apps",
    "azure",
    "azure-deploy",
    "azure-prepare",
    "before",
    "bicep",
    "call",
    "check",
    "checks",
    "cli",
    "configuration",
    "creating",
    "critical",
    "deploy",
    "deploying",
    "deployment",
    "errors",
    "infrastructure",
    "must",
    "preflight",
    "preview",
    "readiness",
    "ready",
    "skill",
    "terraform",
    "test",
    "this",
    "troubleshoot",
    "validate",
    "validates",
    "verify",
    "what-if",
    "yaml",
  ],
  "name": "azure-validate",
}
`;

exports[`azure-validate - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "analysis",
  "anything",
  "apps",
  "azure",
  "azure-deploy",
  "azure-prepare",
  "before",
  "bicep",
  "call",
  "check",
  "checks",
  "cli",
  "configuration",
  "creating",
  "critical",
  "deploy",
  "deploying",
  "deployment",
  "errors",
  "infrastructure",
  "must",
  "preflight",
  "preview",
  "readiness",
  "ready",
  "skill",
  "terraform",
  "test",
  "this",
  "troubleshoot",
  "validate",
  "validates",
  "verify",
  "what-if",
  "yaml",
]
`;
